k8s/shanghai/base-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: shprod
  name: mytestapp-prod-service
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: mytestapp-prod
    version: v1
  sessionAffinity: None
  type: ClusterIP
